# tauri-plugin-hot-update

./: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  build.rs
guest-js/: README.md  index.ts  package.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: current_bundle.toml  notify_app_ready.toml
permissions/schemas/: schema.json
src/: assets.rs  commands.rs  config.rs  download.rs  error.rs  extract.rs  lib.rs  machine.rs  manifest.rs  runtime.rs  sign.rs  store.rs  testutil.rs  update.rs
src/assets/: tests.rs
src/commands/: tests.rs
src/config/: tests.rs
src/extract/: tests.rs
src/machine/: tests.rs
src/manifest/: tests.rs
src/runtime/: tests.rs
src/sign/: tests.rs
src/store/: tests.rs
src/update/: tests.rs
