[package]
name = "tauri-plugin-hot-update"
version = "0.1.0"
description = "Hot update / OTA live updates for Tauri v2 mobile and desktop apps — CodePush-style, self-hosted"
authors = ["Yanqiang Lu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yanqianglu/tauri-plugin-hot-update"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-hot-update"
keywords = ["tauri-plugin", "hot-update", "ota", "codepush", "mobile"]
categories = ["gui", "os"]

[dependencies]
tauri = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
tempfile = "3"
